# fastapi-ca

./: .gitignore  README.md  alembic.ini  config.py  containers.py  create_tables.py  database.py  database_models.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_02_08_2228-5dbfd9f08647_init.py  2026_02_18_2243-7c77b3554aa6_init.py
note/application/: service.py
note/domain/: model.py  repository.py
note/infra/: model.py  repository.py
note/interface/: controller.py
user/application/: email_service.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/model/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: auth.py  crypto.py
