[project]
name = "fastapi-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "fastapi>=0.128.0",
    "jq>=1.10.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "py-ulid>=1.0.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
